ko/15.9/api/api-label.rst
=========
레이블 API
=========

이 문서에서는 |Fess| 의 v2 레이블 API 에 대해 설명합니다.
공통 응답 엔벨로프·오류 모델에 대해서는 :doc:`api-overview` 를 참조하십시오.

베이스 URL은 ``http://<Server Name>/api/v2/`` 입니다 (로컬 환경 예: ``http://localhost:8080/api/v2`` ).

레이블 취득
===========

요청
----

==================  ====================================================
HTTP 메서드          GET
엔드포인트           ``/api/v2/labels``
==================  ====================================================

|Fess| 에 등록된 설정된 레이블 목록을 공통 엔벨로프로 취득합니다.

반환되는 레이블 목록은 요청한 사용자와 요청 내용에 따라 다음과 같이 필터링됩니다.

- **권한에 의한 필터링**: 레이블에 설정된 접근 권한과 사용자의 역할을 기반으로 필터링됩니다. v2 는 세션 기반 인증을 사용하므로, 로그인한 사용자는 자신의 역할로 접근 가능한 레이블만 취득할 수 있습니다. 접근 권한이 일치하지 않는 레이블은 목록에 포함되지 않습니다.
- **로케일에 의한 필터링**: 레이블은 로케일별로 등록할 수 있습니다. ``Accept-Language`` 요청 헤더에 일치하는 로케일로 등록된 레이블과, 로케일을 지정하지 않고 등록된 레이블이 반환됩니다.
- **가상 호스트에 의한 필터링**: 가상 호스트를 사용하는 경우, 해당 가상 호스트에 할당된 레이블만 반환됩니다.

요청 파라미터
-------------

쿼리 파라미터는 없습니다. 반환되는 레이블의 필터링은 위에서 설명한 대로 인증된 사용자의 권한과 ``Accept-Language`` 요청 헤더를 기반으로 수행됩니다.

응답
----

성공 시 (200) 에는 공통 엔벨로프의 ``response`` 바로 아래에 다음 필드가 반환됩니다.

::

    {
      "response": {
        "status": 0,
        "record_count": 2,
        "labels": [
          {
            "label": "AWS",
            "value": "aws"
          },
          {
            "label": "Azure",
            "value": "azure"
          }
        ]
      }
    }

각 필드에 대해서는 다음과 같습니다.

.. tabularcolumns:: |p{3cm}|p{12cm}|
.. list-table:: 응답 필드

   * - ``record_count``
     - 반환된 레이블 건수 (integer).
   * - ``labels``
     - 레이블 배열.
   * - ``label``
     - 레이블 표시 이름 (레이블명).
   * - ``value``
     - 레이블 값. :doc:`api-search` 의 ``fields.label`` 파라미터에 이 값을 지정하면 검색 결과를 해당 레이블로 필터링할 수 있습니다.

표: 응답 필드

사용 예
=======

curl 명령으로 요청 예:

::

    curl "http://localhost:8080/api/v2/labels"

오류 응답
=========

오류 모델의 자세한 내용은 :doc:`api-overview` 를 참조하십시오. 이 엔드포인트가 반환하는 HTTP 상태는 다음과 같습니다.

.. tabularcolumns:: |p{4cm}|p{11cm}|
.. list-table:: 오류 응답

   * - 상태 코드
     - 설명
   * - 405 Method Not Allowed
     - GET 이외의 HTTP 메서드가 지정된 경우. ``error.code`` 는 ``method_not_allowed`` 이며, ``Allow: GET`` 헤더가 부여됩니다.
   * - 500 Internal Server Error
     - 서버 내부 오류가 발생한 경우. ``error.code`` 는 ``internal_error`` 입니다.

표: 오류 응답
